# kinova-movo

./: .gitignore  README.md  dev_notes.txt  movo.rosinstall  version.txt  younes_todo
movo_class/: CMakeLists.txt  README.md  package.xml  setup.py
movo_class/launch/: ICRA_demo.launch  dance_invitation_ICRA.launch  face_ICRA.launch  robot_voice_map_nav.launch  sim_voice_map_nav.launch
movo_class/src/: .__init__.py.swp
movo_class/src/movo_class/: ICRA_demo_subprocess.py  JC_demo.py  JC_demo_loop.py  README.md  cartesian_control.py  face_ICRA.py  movo-class.py  movo_class.py  movo_moveit_test.py  nader_moveit.py  voice_commands.py  voice_input.py
movo_common/movo_common/: CMakeLists.txt  package.xml
movo_common/movo_config/: CMakeLists.txt  README.md  movo_config.bash  movo_config.bash~  package.xml
movo_common/movo_config/env-hooks/: 50.movo_config.bash.em
movo_common/movo_msgs/: CMakeLists.txt  package.xml
movo_common/movo_msgs/msg/: Battery.msg  ConfigCmd.msg  Configuration.msg  CtlParams.msg  Dynamics.msg  FaceFound.msg  JacoAngularVelocityCmd6DOF.msg  JacoAngularVelocityCmd7DOF.msg  JacoCartesianVelocityCmd.msg  JacoJointCmd.msg  JacoStatus.msg  KinovaActuatorFdbk.msg  LinearActuatorCmd.msg  MotionTestCmd.msg  PVA.msg  PanTiltActuatorFdbk.msg  PanTiltCmd.msg  PanTiltFdbk.msg  Propulsion.msg  Status.msg
movo_common/movo_navigation/movo_assisted_teleop/: CMakeLists.txt  package.xml
movo_common/movo_navigation/movo_navigation/: CMakeLists.txt  package.xml
movo_common/movo_navigation/movo_navigation_apps/: CMakeLists.txt  package.xml
movo_common/movo_ros/: CMakeLists.txt  package.xml  setup.py
movo_common/movo_ros/cfg/: movo.cfg
movo_common/movo_ros/launch/: movo.launch  movo_faultlog_parser.launch  movo_teleop.launch
movo_common/movo_third_party/grasp_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
movo_common/si_utils/: CMakeLists.txt  package.xml  setup.py
movo_common/si_utils/scripts/: base_motion_test.py  demo1.py  demo1_loop.py  gripper_action_test.py  head_jtas_test.py  jaco_jtas_test.py  movo_moveit_test.py  robotiq_85_gripper_test.py  setup_internet_on_movo1  sync_chrony  sync_chrony_movo_kinetic  system_test.py  torso_jtas_test.py  voice_test.py
movo_demos/: CMakeLists.txt  package.xml
movo_demos/config/: demo_params_sim.yaml  simple_grasping.yaml
movo_demos/config/2d_nav/: amcl.yaml  costmap_common_params.yaml  costmap_global_map.yaml  costmap_local.yaml  move_base_params.yaml
movo_demos/config/assisted_teleop/: base_planner_params.yaml  costmap_common_params.yaml  costmap_local.yaml
movo_demos/config/mapping/: costmap_common_params.yaml  costmap_global.yaml  eband_planner_params.yaml  global_planner_params.yaml  gmapping.yaml
movo_demos/goals/: movo_goals.txt
movo_demos/launch/: full_demo.launch  inplace_pick_and_place.launch  test_perception.launch
movo_demos/launch/dance_inivation/: move_closer.launch
movo_demos/launch/dance_invitation/: dance_invitation.launch  invitation_answer.corpus  invitation_answer.dic  invitation_answer.launch  invitation_answer.lm  move_to_origin.launch  take_action.launch
movo_demos/launch/demo/: demo.launch  demo_show_basic.launch  pick_and_place_demo.launch
movo_demos/launch/face_tracking/: face_detection.launch  face_tracking.launch  tracking_activation.launch
movo_demos/launch/follow_me/: follow_me.launch  follow_me_activation.launch  follow_me_pose.launch
movo_demos/launch/nav/: assisted_teleop.launch  map_nav.launch  mapping.launch  move_base.launch  sensor_nav.launch
movo_demos/launch/robot/: robot_assisted_teleop.launch  robot_demo.launch  robot_map_nav.launch  robot_mapping.launch  robot_sensor_nav.launch  robot_teleop.launch  tuck_robot.launch
movo_demos/launch/sim/: sim_assisted_teleop.launch  sim_demo.launch  sim_demo_VM.launch  sim_demo_show_basic.launch  sim_map_nav.launch  sim_mapping.launch  sim_sensor_nav.launch  sim_teleop.launch
movo_demos/launch/voice_control/: movo_voice_ctl.corpus  movo_voice_ctl.dic  movo_voice_ctl.lm  voice_control.launch
movo_demos/launch/voice_nav/: README.md  robot_voice_map_nav.launch  sim_voice_map_nav.launch
movo_demos/maps/: 22marsff1.pgm  22marsff1.yaml  26mars_1.pgm  26mars_1.yaml  26mars_2.pgm  26mars_2.yaml  TODO  ff2.pgm  ff2.yaml  ff3.pgm  ff3.yaml  ff_1.pgm  ff_1.xcf  ff_1.yaml  ffcomplete.pgm  firstfloor3.pgm  firstfloor3.yaml  soussol.pgm  soussol.xcf  soussol2.pgm  soussol2.yaml
movo_demos/scripts/: cartesian_control.py  dance_invitation.py  demo.py  demo_show_basic.py  demo_show_basic_loop.py  face_tracking.py  follow_me_activation.py  follow_me_demo.py  follow_me_pose.py  inplace_pick_place_demo.py  inplace_pick_place_demo_movit_poses.py  look_at_left_hand  move_closer.py  move_to_origin.py  movo_class.py  pick_place_evolved.py  system_test  test_segmentation.py  tuck_robot  voice_commands.py  voice_control.py  voice_nav.py
movo_desktop/movo_dashboard/: CMakeLists.txt  package.xml  setup.py
movo_desktop/movo_dashboard/plugins/: plugin.xml
movo_desktop/movo_dashboard/scripts/: movo_dashboard
movo_desktop/movo_desktop/: CMakeLists.txt  package.xml
movo_desktop/movo_remote_teleop/: CMakeLists.txt  package.xml
movo_desktop/movo_remote_teleop/launch/: movo_remote_teleop.launch
movo_desktop/movo_viz/: CMakeLists.txt  package.xml
movo_desktop/movo_viz/launch/: view_model.launch  view_model_bkp.launch  view_pan_tilt.launch  view_robot.launch
movo_desktop/movo_viz/rviz/: model.rviz  model_7dof.rviz  robot.rviz  robot_.rviz  robot_7dof_.rviz  robot_7dof_assisted_teleop.rviz  robot_7dof_demo.rviz  (+11 more)
movo_network/: CMakeLists.txt  movo_network_config.bash  package.xml
movo_network/env-hooks/: 50.movo_network_config.bash.em
movo_robot/movo_bringup/: CMakeLists.txt  package.xml
movo_robot/movo_robot/: CMakeLists.txt  package.xml
movo_robot/movo_upstart/: CMakeLists.txt  README.md  package.xml  setup.py
movo_simulation/movo_gazebo/: CMakeLists.txt  package.xml
movo_simulation/movo_gazebo_demo/: CMakeLists.txt  package.xml
movo_simulation/movo_simulation/: CMakeLists.txt  package.xml
(+545 files in other folders)
