<?xml version="1.0"?>
<package>
    <name>movo_class</name>
    <version>1.0.0</version>
    <description>FAE Demos for movo</description>
    <maintainer email="nmansouri@kinova.ca">Nader Mansouri</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics/kinova-movo</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>movo_demos</build_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>


    <export>
    </export>
</package>
