<?xml version="1.0"?>
<package>
    <name>movo_demos</name>
    <version>1.0.0</version>
    <description>Demos for movo</description>
    <maintainer email="support@kinova.ca">Kinova Support</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roslaunch</build_depend>

    <export>
    </export>
</package>
