<?xml version="1.0"?>
<package>
    <name>movo_network</name>
    <version>1.0.0</version>
    <description>Network Configuration for SI Vector platforms</description>
    
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
