<package>
    <name>movo_common</name>
    <version>1.0.0</version>
    <description>Drivers and nodes related to Movo Plaform</description>
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <run_depend>movo_ros</run_depend>
    <run_depend>movo_navigation</run_depend>
    <run_depend>movo_msgs</run_depend>
    <run_depend>movo_description</run_depend>
    <run_depend>movo_config</run_depend>
    <run_depend>movo_third_party</run_depend>
    <run_depend>si_utils</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
