<?xml version="1.0"?>
<package>
    <name>movo_ros</name>
    <version>1.0.0</version>
    <description>Drivers and nodes related to Movo Plaform</description>
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- Packages needed to build and run-->
    <build_depend>dynamic_reconfigure</build_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    
    <!-- Packages needed to run but not to build-->
    <run_depend>movo_msgs</run_depend>
    <run_depend>movo_description</run_depend>
    <run_depend>joy</run_depend>
    <run_depend>yocs_cmd_vel_mux</run_depend>   
    <run_depend>rospy</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>interactive_markers</run_depend>
    <run_depend>visualization_msgs</run_depend>
    
	<export>
	</export>
</package>
