<?xml version="1.0"?>
<package>
    <name>movo_desktop</name>
    <version>0.0.1</version>
    <description>Remote visualization and control packages for the Stanley Innovation Vector</description>
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>movo</run_depend>
    <run_depend>movo_viz</run_depend>
    <run_depend>movo_dashboard</run_depend>
    <run_depend>movo_remote_teleop</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
