<?xml version="1.0"?>
<package>
    <name>movo_viz</name>
    <version>1.0.0</version>
    <description>Visualization configuration for Stanley Innovation Vector</description>
    
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslaunch</build_depend>

    <run_depend>movo_description</run_depend>
    <run_depend>joint_state_publisher</run_depend>
    <run_depend>rviz</run_depend>
    <run_depend>rviz_imu_plugin</run_depend>

    <export>
    </export>
</package>
