<package>
    <name>movo_bringup</name>
    <version>1.0.0</version>
    <description>System launch file and environment hooks for movo2 PC (vision)</description>
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslaunch</build_depend>
    <run_depend>movo_common</run_depend>
    <run_depend>movo_upstart</run_depend>
    <run_depend>movo_sensor_filters</run_depend>
    <run_depend>robot_localization</run_depend>
    <run_depend>scan_tools</run_depend>

    <run_depend>realsense2_description</run_depend>
    <run_depend>realsense2_camera</run_depend>

    <run_depend>si_utils</run_depend>
    <run_depend>movo_description</run_depend>
    <run_depend>sound_play</run_depend>
    <run_depend>movo_ros</run_depend>
    <run_depend>head_action</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>laser_filters</run_depend>
    <run_depend>sick_tim</run_depend>
    <run_depend>ira_laser_tools</run_depend>
    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>




    
	<export>
	</export>
</package>
