<package>
    <name>movo_robot</name>
    <version>0.0.1</version>
    
    <description>Startup files for Stanley Innovation Vector Platform</description>
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <run_depend>movo_bringup</run_depend>
    <run_depend>movo_upstart</run_depend>
    <run_depend>movo_sensor_filters</run_depend>
    <run_depend>movo_common</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
