<?xml version="1.0"?>
<package>
    <name>movo_upstart</name>
    <version>1.0.0</version>
    <description>
        The movo_upstart package is a modified version of robot_upstart which is tailored specifically
        for bringing up Stanley Innovation Vector platforms the original author, Mike Purvis, maintains robot_upstart
        separately from this package, this package should only be used with Vector based platforms 
    </description>

    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslint</build_depend>
    <run_depend>daemontools</run_depend>
    <run_depend>roslaunch</run_depend>
    <test_depend>rosunit</test_depend>

    <export>
        <architecture_independent/>
        <rosdoc config="rosdoc.yaml"/>
    </export>
</package>
