<package>
  <name>movo_gazebo_demo</name>
  <version>0.7.1</version>
  <description>
    Demos for movo_gazebo package.
  </description>
  <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
  <author></author>
  <url type="repository">https://github.com/Kinovarobotics</url>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>movo_gazebo</run_depend>
  <run_depend>movo_moveit_config</run_depend>
  <run_depend>movo_navigation</run_depend>
  <run_depend>moveit_python</run_depend>
  <run_depend>simple_grasping</run_depend>

</package>
