<package>
    <name>movo_simulation</name>
    <version>0.0.1</version>
    
    <description>Simulation packages related to MoVo</description>
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <run_depend>movo_gazebo</run_depend>
    <run_depend>movo_gazebo_plugins</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
