<package>
	<name>movo_navigation_apps</name>
    <version>1.0.0</version>
    <description>Drivers and nodes related to Movo Plaform</description>
    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
    <author></author>
    <url type="repository">https://github.com/Kinovarobotics</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
	<build_depend>roslaunch</build_depend>
    <run_depend>amcl</run_depend>
    <run_depend>gmapping</run_depend>
    <run_depend>map_server</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>global_planner</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>teb_local_planner</run_depend>
    <run_depend>dwa_local_planner</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>movo_ros</run_depend>	
    <run_depend>movo_assisted_teleop</run_depend>
    <run_depend>map_server</run_depend>
    
	<export>
	</export>
</package>
